--- a/localisation/dec1_ideas_l_english.yml
+++ b/localisation/dec1_ideas_l_english.yml
@@ -4,6 +4,22 @@
  # IDEAS LOCALISATION #
  ######################
  
+ AHE_ideas: "Austro-Hungarian Ideas"
+ AHE_political_maneuvering: "Austro-Hungarian Political Maneuvering"
+ AHE_political_maneuvering_desc: "TODO"
+ AHE_austro_hungarian_intensive_garrison_policy: "Austro-Hungarian Intesive Garrison Policy"
+ AHE_austro_hungarian_intensive_garrison_policy_desc: "TODO"
+ AHE_austro_hungarian_diplomats: "Austro-Hungarian Diplomats"
+ AHE_austro_hungarian_diplomats_desc: "TODO"
+ AHE_heavy_global_tax_reform: "Heavy Global Tax Reform"
+ AHE_heavy_global_tax_reform_desc: "TODO"
+ AHE_dual_monarchy_administrative_efficiency: "Dual-Monarchy Administrative Efficiency"
+ AHE_dual_monarchy_administrative_efficiency_desc: "TODO"
+ AHE_austrian_dynastic_success: "Austrian Dynastic Success"
+ AHE_austrian_dynastic_success_desc: "TODO"
+ AHE_monarchy_of_the_habsburgs: "Monarchy of the Habsburgs"
+ AHE_monarchy_of_the_habsburgs_desc: "TODO"
+ 
  CIS_ideas: "Cisalpina Ideas"
  
  ADU_ideas: "Andalusian Ideas"
