--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -3,7 +3,7 @@
  BNL_ADJ: "Beneluxian"
  SWB: "Swabia"
  SWB_ADJ: "Swabian"
- BSQ: "Basque Kingdom" 
+ BSQ: "Basque Kingdom"
  BSQ_ADJ: "Basque"
  PON: "Pontus"
  PON_ADJ: "Pontic"
@@ -97,3 +97,5 @@
  AHE_ADJ: "Austro-Hungarian"
  JGE: "Jagiellonian Empire"
  JGE_ADJ: "Jagiellonian"
+ KBS: "United Kingdom of Bosnia-Serbia"
+ KBS_ADJ: "Bosno-Serbian"
