--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -99,3 +99,7 @@
  JGE_ADJ: "Jagiellonian"
  KBS: "United Kingdom of Bosnia-Serbia"
  KBS_ADJ: "Bosno-Serbian"
+ GKR: "Goguryeo"
+ GKR_ADJ: "Korean"
+ MAC: "Macedon"
+ MAC_ADJ: "Macedonian"
