--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -165,8 +165,17 @@
  spanish_nation_diplomatically_title: "Unite Spanish Nation"
  spanish_nation_diplomatically_desc: ""
 
+ armenia_kingdom_nation_title: "Restore the Kingdom of Armenia"
+ armenia_kingdom_nation_desc: "The Kingdom of Armenia once dominated the Caucasus. Time was not kind to our ancestors, however, and neighboring empires saw weakness in our internal divisions and used it to conquer our people. Let us drive out these invaders and re-establish the Kingdom and Church of Armenia."
+
  armenia_republic_nation_title: "Form the Republic of Armenia"
  armenia_republic_nation_desc: "Armenia is a nation, and former Soviet republic, in the mountainous Caucasus region between Asia and Europe. Among the earliest Christian civilizations, it’s defined by religious sites including the Greco-Roman Temple of Garni and 4th-century Etchmiadzin Cathedral, headquarters of the Armenian Church. Khor Virap Monastery is a pilgrimage site near Mount Ararat, a dormant volcano just across the border in Turkey."
 
  bosnia_serbia_nation_title: "United Bosnia-Serbia"
  bosnia_serbia_nation_desc: ""
+
+ goguryeo_nation_title: "Restore the Goguryeo Empire"
+ goguryeo_nation_desc: ""
+
+ macedon_nation_title: "Restore Macedon"
+ macedon_nation_desc: ""
