--- a/localisation/dec1_tooltips_l_english.yml
+++ b/localisation/dec1_tooltips_l_english.yml
@@ -42,6 +42,8 @@
 
  form_burma_tt_1: "Owns all core §YBurmese§! provinces"
 
+ formed_caucasia_tt_1: "Owns all core §YCaucasian§! provinces"
+
  form_baltic_union_tt_1: "Owns all core §YNorth Baltic§! provinces"
  form_baltic_union_tt_2: "Owns all core §YSouth Baltic§! provinces"
 
