--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -103,3 +103,13 @@
  GKR_ADJ: "Korean"
  MAC: "Macedon"
  MAC_ADJ: "Macedonian"
+ SRB: "Saudi Arabia"
+ SRC_ADJ: "Saudi"
+ CTG: "Carthage"
+ CTG_ADJ: "Carthaginian"
+ LSE: "Lusitanian Empire"
+ LSE_ADJ: "Portuguese"
+ GER: "Kingdom of Germany"
+ GER_ADJ: "German"
+ GEP: "German Empire"
+ GEP_ADJ: "German"
