--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -178,4 +178,28 @@
  goguryeo_nation_desc: ""
 
  macedon_nation_title: "Restore Macedon"
- macedon_nation_desc: ""
+ macedon_nation_desc: "The wars of Alexander the Great were fought by King Alexander III of Macedon ("The Great"), first against the Achaemenid Persian Empire under Darius III, and then against local chieftains and warlords as far east as Punjab, India. By the time of his death, he had conquered most of the world known to the ancient Greeks. However, he failed to conquer South Asia. Although being successful as a military commander, he failed to provide any stable alternative to the Achaemenid Empire—his untimely death threw the vast territories he conquered into civil war."
+
+ arab_kingdom_nation_title: "United Arabian Kingdom"
+ arab_kingdom_nation_desc: "Under one house we can claim the title as Caliph of a new Arabian Kingdom stretching from the Indian Seas to the Syrian lands."
+
+ arab_empire_nation_title: "Arabian Empire"
+ arab_empire_nation_desc: "For hundreds of years the Arabs have been divided, but we remember when the prophet muhammed, peace be upon him, organized all of us into one ummah, a community of the faithful that transcended tribal affiliation. Today we have overcome disunity and regained the oneness that trumphed in the day of the Prophet and united Arabia!"
+
+ saudi_nation_title: "House of Saud"
+ saudi_nation_desc: "The House of Saud conquered many lands during the crisis of the Arabian peoples after the fall of the Ottoman Empire. Through conquest and diplomacy we can claim the title of King of Arabians under the Saudi Dynasty!"
+
+ carthage_nation_title: "Restore Carthage"
+ carthage_nation_desc: ""
+
+ lusitanian_empire_nation_title: "The Lusitanian Empire"
+ lusitanian_empire_nation_desc: "Our lands extend from Europe to Asia! We are one of the first, if not, the first Global Empire. It is finally time to accept our rightful title as the Lusitanian Empire!"
+
+ german_kingdom_nation_title: "Restore the German Kingdom"
+ german_kingdom_nation_desc: "The tripartite division of the Carolingian Empire effected by the Treaty of Verdun was challenged very early on with the death of the Emperor Lothair I in 855. He had divided his kingdom of Middle Francia between his three sons and immediately the northernmost of the three divisions, Lotharingia, was disputed between the kings of East and West Francia. The war over Lotharingia lasted until 925. Lothair II of Lotharingia died in 869 and the Treaty of Meerssen (870) divided his kingdom between East and West Francia, but the West Frankish sovereigns relinquished their rightful portion to East Francia by the Treaty of Ribemont in 880. Ribemont determined the border between France and Germany until the fourteenth century. The Lotharingian nobility tried to preserve their independence of East of West Frankish rule by switching allegiance at will with the death of king Louis the Child in 911, but in 925 Lotharingia was finally ceded to East Francia by Rudolph of West Francia and it thereafter formed the Duchy of Lorraine within the East Frankish kingdom."
+
+ german_empire_nation_title: "Proclamation of the German Empire"
+ german_empire_nation_desc: "The proclamation of the German Empire, also known as the Deutsche Reichsgründung, took place in January 1871 after the joint victory of the German states in the Franco-Prussian War. As a result of the November Treaties of 1870s, the southern German states of Baden, Hesse-Darmstadt, with their territories south of the Main line, Württemberg and Bavaria, joined the Prussian-dominated "German Confederation" on 1 January 1871. On the same day, the new Constitution of the German Confederation came into force, thereby significantly extending the federal German lands to the newly created German Empire. The Day of the founding of the German Empire, January 18, became a day of celebration, marking when the Prussian King William I was proclaimed German Emperor in Versailles."
+
+ bharat_nation_title: "Unite the lands of Bharat"
+ bharat_nation_desc: "Form the mighty Bharat and bring all the lands of the Indian subcontinent under your rule."
