--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -203,3 +203,6 @@
 
  bharat_nation_title: "Unite the lands of Bharat"
  bharat_nation_desc: "Form the mighty Bharat and bring all the lands of the Indian subcontinent under your rule."
+
+ hindustan_nation_title: "Form Hindustan"
+ hindustan_nation_desc: "Form the mighty Hindustan and bring all the lands of the Indian subcontinent under your rule."
