--- a/localisation/dec1_tooltips_l_english.yml
+++ b/localisation/dec1_tooltips_l_english.yml
@@ -70,6 +70,10 @@
 
  form_bharat_nation_tt_1: "Owns all cores of §YBharat§!"
 
+ form_hindustan_nation_tt_1: "Owns all cores of §YHindustan§!"
+
+ form_deccan_nation_tt_1: "Owns all cores of the §YDeccan§! region"
+
  ######################
  # OTHER LOCALISATION #
  ######################
